changed labels fixed clocks

--- a/index.html
+++ b/index.html
@@ -19,41 +19,41 @@
 <div id="clockContainer">
 
     <!-- LINHA DE CIMA -->
-    <div class="clock-row">
-        <div class="clock-container big" id="clock-ptContainer">
+    <div class="clock-row-up">
+        <div class="clock-container big ptContainer" id="clock-ptContainer">
             <canvas id="clock-pt" width="300" height="300"></canvas>
-            <div class="label">Portugal</div>
+            <div class="label-big">Portugal</div>
         </div>
 
-        <div class="clock-container big" id="clock-esContainer">
+        <div class="clock-container big esContainer" id="clock-esContainer">
             <canvas id="clock-es" width="300" height="300"></canvas>
-            <div class="label">Espanha</div>
+            <div class="label-big">Espanha</div>
         </div>
     </div>
 
     <!-- LINHA DE BAIXO -->
-    <div class="clock-row">
-        <div class="clock-container" id="clock-brContainer">
+    <div class="clock-row-down">
+        <div class="clock-container-small brContainer" id="clock-brContainer">
             <canvas id="clock-br" width="200" height="200"></canvas>
             <div class="label">Brasil</div>
         </div>
 
-        <div class="clock-container" id="clock-clContainer">
+        <div class="clock-container-small clContainer" id="clock-clContainer">
             <canvas id="clock-cl" width="200" height="200"></canvas>
             <div class="label">Chile</div>
         </div>
 
-        <div class="clock-container" id="clock-coContainer">
+        <div class="clock-container-small coContainer" id="clock-coContainer">
             <canvas id="clock-co" width="200" height="200"></canvas>
             <div class="label">Colombia</div>
         </div>
 
-        <div class="clock-container" id="clock-peContainer">
+        <div class="clock-container-small peContainer" id="clock-peContainer">
             <canvas id="clock-pe" width="200" height="200"></canvas>
             <div class="label">Perú</div>
         </div>
 
-        <div class="clock-container" id="clock-arContainer">
+        <div class="clock-container-small arContainer" id="clock-arContainer">
             <canvas id="clock-ar" width="200" height="200"></canvas>
             <div class="label">Argentina</div>
         </div>
