--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="clock-row-up">
         <div class="clock-container big ptContainer" id="clock-ptContainer">
             <canvas id="clock-pt" width="300" height="300"></canvas>
-            <div class="label-big">Portugal</div>
+            <div class="label">Portugal</div>
         </div>
 
         <div class="clock-container big esContainer" id="clock-esContainer">
