fixed label dark

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
     <div class="clock-row-up">
         <div class="clock-container big ptContainer" id="clock-ptContainer">
             <canvas id="clock-pt" width="300" height="300"></canvas>
-            <div class="label">Portugal</div>
+            <div class="labelbig">Portugal</div>
         </div>
 
         <div class="clock-container big esContainer" id="clock-esContainer">
             <canvas id="clock-es" width="300" height="300"></canvas>
-            <div class="label-big">Espanha</div>
+            <div class="labelbig">Espanha</div>
         </div>
     </div>
 
