Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         const countries = [
             { id: 'clock-pt', tz: 'Europe/Lisbon', lb: 'Portugal' },
             { id: 'clock-es', tz: 'Europe/Madrid', lb: 'Espanha' },
-            { id: 'clock-br', tz: 'America/Sao_Paulo', lb: 'Brasil' },
+            { id: 'clock-br', tz: 'America/Brasilia', lb: 'Brasil' },
             { id: 'clock-cl', tz: 'America/Santiago', lb: 'Chile' },
             { id: 'clock-co', tz: 'America/Bogota', lb: 'Colombia' },
             { id: 'clock-pe', tz: 'America/Lima', lb: 'Perú' },
@@ -364,5 +364,6 @@
 
 
 </body>
+
 
 </html>
