--- a/index.html
+++ b/index.html
@@ -74,6 +74,15 @@
     </div>
 
     <h3 id="eta">ETA: carregando...</h3>
+    <video id="keepAliveVideo"
+       autoplay
+       loop
+       muted
+       playsinline
+       preload="auto"
+       style="position:fixed;width:1px;height:1px;opacity:0.01;pointer-events:none;">
+  <source src="blank.mp4" type="video/mp4">
+</video>
 
     <script>
         const urlParams = new URLSearchParams(window.location.search);
@@ -344,11 +353,7 @@
 
         setInterval(updateWeather, 600000);
 
-        setInterval(() => {
-    // simula interação real
-    window.dispatchEvent(new KeyboardEvent('keydown', {key: 'ArrowRight'}));
-    window.dispatchEvent(new Event('mousemove'));
-  }, 20000); // a cada 20s
+       
         /********** ETA via Cloudflare Worker **********/
         async function updateETA() {
             try {
@@ -374,4 +379,5 @@
 </body>
 
 </html>
+
 
