--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
        muted
        playsinline
        preload="auto"
-       style="position:fixed;width:1px;height:1px;opacity:0.01;pointer-events:none;">
+       style="position:fixed;width:100px;height:100px;opacity:1
+       ;pointer-events:none;">
   <source src="blank.mp4" type="video/mp4">
 </video>
 
