--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <div class="label">Brasil</div>
                 </div>
 
-                <div class="clock-container-small clContainer" id="clock-clContainer" onclick="chileClick()">
+                <div class="clock-container-small clContainer" id="clock-clContainer">
                     <canvas id="clock-cl" width="200" height="200"></canvas>
                     <div class="label">Chile</div>
                 </div>
