--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
        preload="auto"
        style="position:fixed;width:100px;height:100px;opacity:1
        ;pointer-events:none;">
-  <source src="blank.mp4" type="video/mp4">
+  <source src="assets/video/blank.mp4" type="video/mp4">
 </video>
 
     <script>
