--- a/index.html
+++ b/index.html
@@ -74,14 +74,8 @@
     </div>
 
     <h3 id="eta">ETA: carregando...</h3>
-    <video id="keepAliveVideo"
-       autoplay
-       loop
-       muted
-       playsinline
-       preload="auto"
-       style="position:fixed;width:100px;height:100px;opacity:1
-       ;pointer-events:none;">
+    <video id="keepAliveVideo" autoplay loop muted playsinline preload="auto"
+       style="position:fixed;width:100px;height:100px;opacity:1;pointer-events:none;">
   <source src="assets/video/blank.mp4" type="video/mp4">
 </video>
 
