--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
     </div>
 
     <h3 id="eta">ETA: carregando...</h3>
-    <video id="keepAliveVideo" autoplay loop muted playsinline preload="auto"
-       style="position:fixed;width:100px;height:100px;opacity:1;pointer-events:none;">
-  <source src="assets/video/blank.mp4" type="video/mp4">
+    <!-- Player de Mega Hits -->
+<iframe src="https://radiomixer.net/pt/prt/megahits/embed" width="600" height="96" frameborder="0" style="max-width: 100%;" loading="lazy"></iframe>
+
 </video>
 
     <script>
