--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
     <h3 id="eta">ETA: carregando...</h3>
     <!-- Player de Mega Hits -->
-<iframe src="https://radiomixer.net/pt/prt/megahits/embed" width="600" height="96" frameborder="0" style="max-width: 100%;" loading="lazy"></iframe>
+<!-- <audio src="https://playerservices.streamtheworld.com/api/livestream-redirect/RFM_SC" autoplay width="600" height="96" frameborder="0" style="max-width: 100%;" loading="lazy"></audio> -->
 
 </video>
 
